add i915 extension for gpu passthrough

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:9q5gYoPF0D+3EL4QFm6hoZ9ieV1dk3Kj7oV8iO36kWm8HRABrbL83fS9HWcGSjjUvjp7dorzAsT7RNaJw4eJqzg=,iv:3W+K3xXOiD0Zt/4rKoWYuEgaMS/gVLcOwfw9zMaaJ+Y=,tag:atrlovzOXR+Wn6C0sTHHgw==,type:comment]
-#ENC[AES256_GCM,data:3np0f3B6yWzGE3PKZ8losgzuyCHx6aRQrbu5k2mEL2cWXOrhxxeS2Tk4q0A=,iv:jAlvS9v6MyebPIE25kM1HgsBpz7hH5ayp6vM6XK0cZU=,tag:3K8ShOYUbuUQ4v8PbqK7lw==,type:comment]
-VIP: ENC[AES256_GCM,data:AYBKbFKYLYDLl/jKkw==,iv:PAIXZ0AmSRD8NsRreyvzyNXeKITZsHfccmSjmRerrbk=,tag:8icbFWgXUA+YxXHMeAh6fg==,type:str]
-#ENC[AES256_GCM,data:qXR6JZBoDPXj5kwB3o2co74EhAyNJ21cbkxB,iv:Na33+UpL2Z1VsmHC0YiMywUMYuS9EFg325qgPGDe/4o=,tag:ENAvIIzmfDWYVaJciJ1sTA==,type:comment]
-#ENC[AES256_GCM,data:EY/94PF6/r6TaXS+7WfdJ3i9VZA/cDWn1J+JmHTJW/AsEXBizGGWMeHpreEF4gJzsVFPFpJk1oMeUm+8BZYu5Fzgo8k4IQn583kAH6GwzuCtMUwuww0oNow=,iv:XbfDULAHQ3ikYWvqi0rx0lr8OEnLE/Z3HtDjLPKi7ek=,tag:3hdaVJaCnrWRAIF+ZnBt7A==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:DKIMcHOTYy7/kdDKG7c=,iv:VXtP5+jnhd2HNx0qVWhvZ6t0+ZywkNDUA8hHtvYpoBQ=,tag:Qoa9gcXD5ugK9PTeAgtMKA==,type:str]
-#ENC[AES256_GCM,data:zwsKx5XGPaESSHoT8r4GmQZtoBxUeytT5lfOKCYDrAk0Nw==,iv:D0F9m2T8VI+ipsDYKUwZP573UbToFwvKIf+nqIrmsi4=,tag:CXV3GwLwal7ic1IPqmfhTw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:47upbz6JFDcHT2vW4Q==,iv:zct/anTP7UB98XZaLtnsSsrHJTL9mHES5aBJ0ln/t+g=,tag:UPQo7zIwu1fgnHBxHt5zwg==,type:str]
-#ENC[AES256_GCM,data:oAWbMUDzxPwG0++HlImQ8wSFSrqQx1MWa5or9ZNorIXVIpXmNvOliccAUam8BBc=,iv:M70fwZiv6sPxd0x2l+174Gtd0FPVG7xkYht3fV02mO0=,tag:5Qkj9LrpNxz0p+X/AJgegg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:FcMBj0ZuSa402zxAXfIWf42Z1MzXDVvh8Q+xu2LxYw==,iv:54NVStaker7HF8l86X56HwnzKsXiJHTz0wO1b29fWxw=,tag:D2rVMKGykWJoDyUGD2N4zQ==,type:str]
-#ENC[AES256_GCM,data:vYNbSXP3d/KmoEW+hSB5nFxgflJHS3PMLYxj7F957KJE7RcWwKeyyoMzdYKxk02x69/UT+9I3Ljw9PRUClkMDwd2fLOcLV2lZuu+4o2CXlQD5Q==,iv:Gk6BTfFgf0fGViMc/hoe6l0H/aYO2VoYcUD488Gwzog=,tag:VxhpAr7L6UdtfZFFx5W3KA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:LeIiF4v2mVQ8DtQMpCSG,iv:P9WY2XxYEULSeinI8UtWfl3tdfkru5Oo1ZIMuZSpHfU=,tag:t/eu/Z1bLPBgsQwoRDYOLA==,type:str]
-#ENC[AES256_GCM,data:DDDq5ArPaJk7rpthHO0UfCB8P50Tqz3l9aM4B0vnnPUR,iv:vDkjYSCwYaEWDq4cUadDkL3JDZZaOy8qMYmOG5vOq/I=,tag:mvTeXu+xi2mGrtL1O6iMyw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:G5bE1PapxJxjCWKituoL,iv:kdNXz/W0HhNzezwULXK7ZwTUfyf1NOwoWGInbdSsPzE=,tag:eeyilbre3eAzmQvggFAKyQ==,type:str]
-#ENC[AES256_GCM,data:OeNcRh/HEAz8lD2CUOuJ7iIQTic50WtamoKsjQXiWrhhFhQ7BeB1orOYmJbtGcRrT+W4NymoglhxKBICK6sIFCyS1KhU0IFNl2WkrDE2wNU=,iv:nn2+5X76dcWWyxljbOD0AdCP4jnjVWDH48aHG44L21w=,tag:H1Su+Rsks0W91SkIZqoajw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:t6YaYnE7dFEQyM9OnK0D,iv:w6dwceVMcaPnsKhcDFU8sAo1JiBkBD2gBbSxRuCX1Hs=,tag:Cng7+ZoYgeS81N91iEh6cw==,type:str]
-#ENC[AES256_GCM,data:uqlNlahkoDStV09/t+0xr3AuB4V+BonKbb1nNfBdtaMuicqM/6Y7tTwkJeTxVj+SMfzofQtHnebwpuVEWOYD5Peswo7JHr0EKINvL9Woxv6ADDbMFAw7,iv:mtdWetzIt+VaqFJyvKKmjIuD95aa/T3O/bK+8t8BXSE=,tag:SeILotWw990kKlmnkXpwiw==,type:comment]
-#ENC[AES256_GCM,data:x8KWui1qHr3GFiPGpSzuik1rNRtYlW14YIC9PvgUtEqhQ0yOyptVB4iDTNb9mjqsSY5TxmqqAvMG2qK7ZDg9hUbse5ZaV7xgM7/M1guc0VTpdvnqwjd0yRFdVxgaQ2ost8UNDW2JEVxCAnwANWRqBpnLpLvf4duXcbUHdw==,iv:trOtmI5LXSelukby0xDUxfTIuF6iyZG5PYq4638CS1U=,tag:dNoN9GQRhj8lbYP3FDtZ+Q==,type:comment]
-#ENC[AES256_GCM,data:VNqBew2TKveIEVGkopDNY5gSdCsqijlGhiBWN1jY69BC/PiS+fXPuf85FGf4QzJtojq9UTQ0oly4v3IcrheW0QAdD7FPNo61v/ZD6S+V8/8=,iv:glksSbxF0r4Rjb05AMzu7XNab1CO4n8IXYMKYUoMCyA=,tag:2x4BsXdc0E47tSgW6UHkjg==,type:comment]
-#ENC[AES256_GCM,data:GeLANw7thj11VLD5j/8eSZYbUyghaz4etJ+QTTHhg9EHhSr5JJxPDx5auyBFPF3fENpvLWW+,iv:+pFFd/DPUk//7zWd8NTJKqzDTGX1js5kmKerl9G50xA=,tag:/lUS6QK8glUkepjQrEmVRg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:eHvNHGu5XFQIdTBO,iv:F2pS6pkZu+JlAoJWf4T2+VR0rzefANVpBjR1i/3z7uc=,tag:2uyEn+jKepOtz9fW6QEhlQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:rT3Em6EvNMS7q9mHMC5+Hzg=,iv:zsG2A/CLGNux+rKMRa/yXLZzIIJz3Rnf+NOmr9X/7nE=,tag:JCN2ln82USMT4WelN3AA2A==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:Yq3Uj9p9uvC9f0JSOgDKwsSOP/8iKblubRpVFhMeiQk=,iv:WOmhW7yDVZQ8X1isdrpga4u4TPumT5kAtpVhrHdfWpQ=,tag:RcXrhD8N1Qw7X4C/AnqkBg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:CZTYXPEvCwUh7CX4f6gE6J9fGq1D5Ue8qskd5a4jaZs3NeOBWHXEfA==,iv:msdmzrFZxhciO9mBVE4ZHeL1zpbKVV0wqrVh73f6Ujo=,tag:KEr8ImT/QBl+eikJnvENag==,type:str]
-#ENC[AES256_GCM,data:qYOgaFz9ftoDSRGsD9EKFreDQMpPybpIMFPeTPwDA+lw3UGXhZycgeSBlOraQFwQO8SykkeRoFn97IOAyZJbhw==,iv:kG48PmGgPKfPHbvXDLvIfJAvyQbAXkDiooCZbljf2JY=,tag:NI9Y56cKcTZMhvkSESqLGw==,type:comment]
-#ENC[AES256_GCM,data:F3WmXQjXcaGhHMmoyGTkHEtd2jRlM2jP9440uJlRqrqE7eMNVPpta9S/g5ceZ9qdJkDJvIoNIoQ=,iv:rLUcbz8Drg0HT/WGFKKctxztrKt29mK5JAvLXAnvUXU=,tag:QzY0PVZYRM258zsoKDxYbQ==,type:comment]
-#ENC[AES256_GCM,data:+SaqdrpcIorqrPUgklM8qTgr4IWEnTqZ8w==,iv:OOBrqUZmJSv8hINC1fE7QYnO3q1pgWfSbBj2QLBJDaQ=,tag:O3oVOoPgcbbdh4twrU3azg==,type:comment]
-#ENC[AES256_GCM,data:UJmzm9l64RlyjzznnlLOL20M5FH/X5bYVr8PNUfd4ITjFf4Nv1ONsiGOnUCMywEbCR67C8vsPwdgqhF+TRuaYQ8DtL/VLe2cg28owF4=,iv:4Q00sycn5Y6MCIU4h+zUxzdGrdxCzF8Kk1zDpBFWa7w=,tag:9M1uj3Lvex1G5xzKIoXknA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:d2SZwI/aCny6U9b8LNC/5/7IsttWL/dYDQ5EStIbWggxQFvUeSuDUzopni0YENS5,iv:4rzjjYM0nSeoVsxYMR3dCYokjRrUvtNsYb75N7io0Hc=,tag:CiQYghKEzlZnY9RoDGS+Eg==,type:str]
-#ENC[AES256_GCM,data:by4LSQfohhJMuB7CZihB1xhXCxU0CxvfLobYEbrHssjTAqapZvTSC9Rs2/zl5bs/qGG1RNd59UBjNDn8ZXHE/rv2D2hQS4E=,iv:4vd18cm35uIpIoO+fJuHg5x3DpFhWrHZn98YIgz75Jc=,tag:StKG98D++Jwvute78nyyDA==,type:comment]
-#ENC[AES256_GCM,data:Xac62wyP/FZlyhwessiH1GWw/BGi5h+MSs2qVQb49jDHLPYQayQ//YaGflDcd4qN14WSDdFq,iv:8KmCGtXuTYZtiwyJdvKvdbfqgXHJ4Tg+Di4w9CBZJuA=,tag:KuIgcMCwDSIDaho0Nbc10w==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:3pq43+KK/A==,iv:DdGu1/9i9jKizFJk/Ik7M9w8Bd4riQz1OLYtEb96znY=,tag:kxoIoXOjDWjD7/UxR5MiQw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Gakzm5cHa4UTYk4y0q1UqT/Bh4s=,iv:b7IBpmfrwpxx4HizjPtmdZaR1nxVi8QVNqA65CrtoaE=,tag:nyJlghX3rD8HdlAw1y1J4A==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:iUPQZCFKcX7ChDQ=,iv:vociJmj4w5H/IWDx5avfHxfk1vbi7qr+YKBmcSgcWmI=,tag:ExPpGOjYj4gbHyHqyz59rg==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:xa+K3kJ1zQl95WUy23Yo,iv:jh02zbE2W0LfvlbxyYWdtZRsMt1glxi96Wts9Gvz44Y=,tag:ID2ud9PyY1r+wHNQ2sJmTw==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:OH2N/acwL5ro+7R1bqLiGtcFKOjypZ5Btw==,iv:MPBvXWaitSrttynOr2EQqieYfNrYsCkK1BfMq66uV3c=,tag:/jwKgyl8mHUjm2qgLsgw2w==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Vu5QdZEPnR01+E+MkFbEWVRLSxqAx/CrK6waTW58JQ==,iv:ivhFFHE1MiVPS0SGd9176d1wsPmIopOACPfk/vWIT4g=,tag:/QJVzUfFsrMX2h7U4zJxcw==,type:str]
-#ENC[AES256_GCM,data:jHiDBKqQmwMeX9yzI1tOKaUQtjHSbiiJnZ6sPBxfK7ihYET1N8o=,iv:2ilu/8+zgooO4nLP5XlI5PAoH7juAU4gMP6vnHziE0I=,tag:i/qhcsvuLhL0WVPYSyFKXg==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:T7yYct/p017qN3OfAHSK6MD0dkA=,iv:Tu0mzqQ43QN2+AMHVUJi9raSl58JXElG/wb2Lo7Y2rE=,tag:HK6Ct+h2i7UIcnZK2cwq9w==,type:str]
-#ENC[AES256_GCM,data:tc1plU3gPx/gNFhUTjg=,iv:g9MpR80tQFTF9rLzSEM2IBNmHXItgxwTC63kXVHQf+Q=,tag:Ao+gsyxmzK66CDChXJzieg==,type:comment]
-PODNET: ENC[AES256_GCM,data:a0pEJFs0ToYxA4YzLQ==,iv:+/vOQEBanEWOIAlxMOm+Fou2SZ+Vfd8Q+NNaDJKzhf0=,tag:7ZplGxE7u9tf+prC3OK7RA==,type:str]
-SVCNET: ENC[AES256_GCM,data:cA1XHRSyK3fUjnUvFQ==,iv:ErS6sdg1X6ea5LVyEU5NZLBVjQaBcVGs4gtXxwJRDhY=,tag:609Ql/gzMaOX21gvhO0AQw==,type:str]
+#ENC[AES256_GCM,data:audObyN3rgl8wVGoq3it/fh+KgBSQ5ontuH2HQXu1YiGEMlMMu0q2ATzgUq3nQqvnyUISrG7QkVnoL+z7GUTq2U=,iv:DG3HIhknHArK+h1eGtha76ipu8IM5YxsgF8IGDOXe1U=,tag:Lqa0Sz3RYk6HBkcvSDzeGQ==,type:comment]
+#ENC[AES256_GCM,data:GkjYPHiXK+mII6jW3yRroNqJ4OiipYz2z1vWqmFm3RHDFp69hieCZZcCIaU=,iv:r2B5Cqao1stGCfwpuq2SxSsqhkUSFarK5GizX3I3LjE=,tag:2T6FocdTt7CX+DmlJA1ZIA==,type:comment]
+VIP: ENC[AES256_GCM,data:WXXHxmdDSgH3WeMC2g==,iv:jEe0fQB8OODJhOktD5bgRAfZ7D0MkiH/obxKrIMc8zw=,tag:BrudkLpy6zZ6Z7+i5trkEQ==,type:str]
+#ENC[AES256_GCM,data:OWrVAadGeqYIU2cuwiM2Khp8qGQbRy9AaKJv,iv:pspetpnQIi+RdS4GO9fePySGjhvPS0sBqbNGJwIrXjM=,tag:i0OX/JePfP8A4O08LQgwvA==,type:comment]
+#ENC[AES256_GCM,data:lmRSifY30TGSzGp1zr4pXVX9kohHVQQLnlwtwTqTYRvrtSlVEJw8Gctx7CwMLOwydMpRqgWgMrXVhXjoUPX78C0mhZRxC17M357ZEbt27cl3uRcH0PTmHlo=,iv:JrFHttVGRV4ybfQKo09ovR/8In9HCS9w7JQ4F1cbqSQ=,tag:PzcGTISeQ8MFYgu3qZsFvA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:09X4QStZPVa6p3xHkwc=,iv:sTu7snWDfQ/9rBhNpu1gJIp7nFiBzJP008nqVsnK2OU=,tag:PzU1GzEPUi4iat+L8dl6ow==,type:str]
+#ENC[AES256_GCM,data:9X94OOP82nkGEL4Ij5BJCl2o+eUHW0+rXmJCVc0O9To9Xw==,iv:PdGsHEtY6yDKg/xO6Otl2bBBvdJIK6L3qPLWwACXCzc=,tag:SgVIMVuH/w7S9rIhycYgBA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:FaGejm2AkxlhObLxvg==,iv:rdbTmkiO3NseemFv0S1luTFvjojRI2TgMbamWe3NbL0=,tag:B9pwj7ljEFVzfsoMTiDfqw==,type:str]
+#ENC[AES256_GCM,data:HfCZo5uDb90TYJcw7GLaKLkhb6842GnNBBjhmF68c+PR0RTLEd/Ynarn2WgWovw=,iv:PvHAMHm/tS5dPCUrfDUqZpovuKN5KZA7hjdAAHMymOY=,tag:J+NSbIWt1i/kGQkh+brkcQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:R62mQOQG+TU13h8RhzvbBg2Q+BieFsQ4lqsYxvd/zg==,iv:ttBu97ocGpp9RiG/pFTm5IweJ5D6nJlFaoKy7pzC+oM=,tag:Z5/2jkv0vgOUCX6T3PlZsA==,type:str]
+#ENC[AES256_GCM,data:QF/wWK9Iz1konbJiMUKfgA2tpf98CfCCJGn32FFz0Ac+0zJKyZRHbhqN8oAWm5piIUTiqTTRkN+m0OrkLTVnVIl7sTPTgcj5SziyNYUttauEeQ==,iv:H1eJjbhi+HlGFVpYclCXPgcYR8BttLFf32zfopbn7E4=,tag:piow3p2/mnvWMeLSqoFCfg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:TJcL/aVZTZltK7TVba0G,iv:XG2avQHVudDKo4z0BP+5c/r7fMNj7UnVNRix4iSSpxk=,tag:qB9N1Fr1frw+wbzJu4a/zQ==,type:str]
+#ENC[AES256_GCM,data:NPMF+Not/fBYDjn32agC0VrtF3KxXMSWH3VHOb9OzGGK,iv:dYwTIQs2uv7MEhjyuecGBn+s+TaJeyiUHYdjAW59jNM=,tag:YywtmBTU++rcH1/uBWEwQg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:JYJOCKcv57RLXryR9LHt,iv:xUcTxSQnh2W38wrFMrfZZ2NlqvpAdQXYAXDncaJRcy4=,tag:8P11dVqIxvycZ2MH7xKmsQ==,type:str]
+#ENC[AES256_GCM,data:wypgbR2KUXQErsHlZOQiyBTgwuqDnOWCcu+UIVJji/loCccuZrue2ShU98oTMQYt+b82LZS5csrdHyTwgYAgwM7k1lu7l/XpO0CcTP/006k=,iv:3nIjpOTDxjNklyRCi836w2izhm4m34ulJrIFwaPuwis=,tag:TpIDQmhMlOuOIDtGGBJqtA==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:Ca+f3/6GUS15/V/PzPbX,iv:mqCATmJCUYjJlNL1EN7bKfj0/ecCYHlmeQi8+OWQ8QE=,tag:T2tsvd34xvpPAe+k34TlgQ==,type:str]
+#ENC[AES256_GCM,data:xC8mJlqix5dxKemvdvP9+Wa6iKr4vtd4HNbppEo3BlJFIbTDUx9D38jb8jiQW7OAb+I2yzCFaLPUjwUSjjXa88HkS3t5K8exT9iZYwC/N+7mskNk+q3i,iv:E5aR+vZ4VDZON6lxtEcKLzefXNwP7hGtdOwON/vHpmQ=,tag:07AeRsjjRR1P/uLvbv35/A==,type:comment]
+#ENC[AES256_GCM,data:wwa/I/C5C+LpZIuZXUcd0OpHTKR8nHI1Wd+26GX4nVYqumAQ0POFwM2fh04Qtwdn8s68lksjdOludlLJvZyaNtluaKRqcOxjssl4FzaxC95BZx5D+MgK2Ry5RFRlW7DC8FGkg47ntvY0pmr9eToCFFhPHV8eZxan0Rf68Q==,iv:U4OzHtCGQuek5n7vxyVHDrO2QtXVQ4qrtfXjfyPWr70=,tag:x4Oec5/USjHDrWFEuVDI5g==,type:comment]
+#ENC[AES256_GCM,data:QtA+dB9qqkb8bD8a5NmjYSnbcqrMyy5KnSTyRc6i6cMjIMQX9foRYMLIoW76sYN6zbG3S5IL5jay9MCwwVwcP5BEET3PTMFjlUs57UfDEjE=,iv:ad1aKGjD3XNbpDvzgyBEDGemOQoHOkIVaZ8M8vfIEvc=,tag:x1yRnR4+kc6lXo9CU9I5Kg==,type:comment]
+#ENC[AES256_GCM,data:85yt569BNYyXCKY2IzL9gnDginhCyv7Ye/4mFFIbAvmxOTkazj/G8vH5TQ6jB3uuat6WJD+T,iv:CO+B7Gm+pcTaj1m2WuPg/ldXmqt9kuWVVqSSJNrjx+A=,tag:BvtOycfIZ8WYv9eSu7azVA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:r4RL5J0sxg7McSfF,iv:fPQu6+Xlfwh00vD2uotSqvXxgXRCzTURrat5q+JQclI=,tag:W+o00eiG+4l3XEcP+d1cbQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:crnDCHXzIyTNngbY91v0MtU=,iv:0xXa624Vo0KB236h7WfaeCHWO2ccpz7v3qdUlHcg5ug=,tag:qK50XQgW6/NRZTPwrLcyoA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:2Equ4gEzL0eZa22j4z0kxCqWyIAQHT9SnN2ycJAzFd0=,iv:Ol22pnBoxiplNRUqElgixfqi0uBsMC5E7VXVM+S4jI4=,tag:lRj5xtrpS51p40BbYVO3NQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:TdTr11kP+cFWhnh11qRWnCbWvkl8/mWavOOUylfhpfYiGlBlHRY72Q==,iv:cegd1Jw8cvN00FMoUIllS3e2YgwzIrbUKMlH78ZTEjE=,tag:lsdP8aOQ05e/Hs+QJJA74Q==,type:str]
+#ENC[AES256_GCM,data:5uzgIdfgTyDVB4fcQZ8xz5hLxKjmAzDT8yidWFnNT6PNXFsLCHYOKChTaZJxrkkhCk3lEzIlPNDbiRCwNcRtzQ==,iv:eYTjta/sbbv9EznvaVt3fs2ftT0pgzuCKB7O+b5/a7c=,tag:GF80xqZjsH5Ihu8kNQIjHg==,type:comment]
+#ENC[AES256_GCM,data:nFnMfTKfNJ8a5NkFgAHPOrresjH4/9yF8bBXW8UDrxgxn2mK/vI1wsd13xX3LvlzUPWB2Avwmro=,iv:jXCZdKMw4rs/mN3vJQTRZUTvfZg6zAd7ie1HwGOGOdY=,tag:w+q2/IcxCvbd8gd3rkjOYQ==,type:comment]
+#ENC[AES256_GCM,data:mgF2rCZ9JsUgH9YR9ecNq6wzwWKrrTEg8Q==,iv:qys7h98HvKjkfBh08JqyQWsfh9tvHV6k9NRGbfJayzU=,tag:U4VzRlexfVcUsS0T9MvgFg==,type:comment]
+#ENC[AES256_GCM,data:ZdR3mfKljMXLYP0N3a8vRIwFSO9VDu+GO/goYiV1m+FzNi2nrz3hmKk7UUtYjt8Ksf8KfTmts0MzMqwXX5bdKTgyLY0BPaKx+Y32Le4=,iv:HUBX7mZP8OCfBm/+Gd3i0lqFoGXVUGyf5th34Mj/05A=,tag:W2TAZDPcOt4erJ0jkvpViA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:CNi3aMAcQcwlN5HhRQvjHPbQlSasi7uPmXpB+bwFK20KlmIYcimlfXfMdmuyP5ph,iv:0+2C2X+JuGoFbEOTycrEroZxTpmSqlnr0pH4cqPIA9c=,tag:5nTetzKwwmuO6NPTrNmOtw==,type:str]
+#ENC[AES256_GCM,data:S8MmlOBXmcj7m4dRVtg+K2rQiNQEtvPjRsqT6sSW/+iRclPtoDWwmwdsoYbh4GsqK/ME0mjRZR0/6FrxSGntPTHb9Wps85I=,iv:TuAcVfJt8bWJQCFxNXCZhfKGkMHiCtsoDCLUhII7OHk=,tag:anEUxj/xx8aIgcVvxILKmQ==,type:comment]
+#ENC[AES256_GCM,data:8SPbUShSnUCfRTNdxNRVDA4G24ltt/kAnlco/sHP+si06WXTvace24fNNCBvQVwkewYAc6Hj,iv:CUO7CN1gp1FykdZhC+ebAha5MNT1GhbFhEyLZmj80Co=,tag:w4Fc/XQlYOVhFXUC9e5OZw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:FYTo+UGlRw==,iv:xBg2WGbTTXlb8VqJZJr98YlDh2AEHzgSEpORX4YZDAc=,tag:wH8k+LXDCxsaxKVxsLbRmQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:F+zxk1FTnaJO07cQuZAq1KhtTcw=,iv:YE9hDjmsOZQpfs/xidS+VnQS0pGr/fCcxufP+xDi7L8=,tag:iY2KCBS6kYNqyiLAtLRyRg==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:yM+rJL0+EFSizFM=,iv:GIcc+QeYEpVeAxl6CdJzivFxx5f0XGg5J+B+LL93fY4=,tag:IpZEriKfScKBMALck+SiXw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:pxdKkL4aOQVxe6kEWGCP,iv:MKobLzYkWuL8l9cx40fBWx+0Xi7N5xyVW7gG6ZvSZMs=,tag:yjSUFA/NCGrLTddhzLslfg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:AcU+17XmDUzggaqXkn2X6Tu3Gou7PjAQtA==,iv:YhL50ftwZ9aOlY0oNjRZ8uLaV64gue8jRQNDcM4lEc4=,tag:ap6pmLhr2wOjwhv6QO97/g==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:LOTSL06jbw2YjyLCU268yKi9YQrnZceWJ4HLY7vgKQ==,iv:PI04UuJAcI7Nysy/Xqq7GbCTLPh0H//KdMcvCJwAees=,tag:QNe7ml1FOCOVSka4Z2EQ0g==,type:str]
+#ENC[AES256_GCM,data:qPnyKnFPOHKJNR6Sy6R4atfY0ebY/PYiEcKi7Tc2ZrXbdPHGE10=,iv:cAmmh5SI5v6RhsMa0OcOrL9QwaEH2xHFBO2OvGuymAk=,tag:PywVE87ZYWQQfLvgvc0+Pw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:/XEFk4SWkE8Ij/ySxaT+HADgD8A=,iv:Mip1Cxgf4d81u5I/eOTfWZEvzKlkpu/FEBgj22aO4xE=,tag:n66Mcfsf5447p69q1pC6ng==,type:str]
+#ENC[AES256_GCM,data:sAVPawfl1RTY1mzxwak=,iv:/oTnlKhReRN92Uoj7EtcGlXPyl4VZrBfgDbxnN0nD7k=,tag:ikVOkuROBI7eQVTUzGf4mQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:7hsB+giXfm1ejlDLcQ==,iv:7vk54wvpjN6hoR2gRyos/mWS4gbl6O0e3rmOiYNOnhc=,tag:nYZq4ynGlgfm22ffiCFZ4g==,type:str]
+SVCNET: ENC[AES256_GCM,data:v6EF3xF83lO0/SfzsQ==,iv:0bJfS2FHZi5U+V5jO4DGBZxxjzeAYB1yzMH9NApU79o=,tag:f1hgbUG9peSEf3eATlZ0Ig==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzbXllaE9xMHhHMklwVlJG
-            d1FFQ0daKy92MDBCdlVITW5aZTIwK21CVlEwCkdWb1JXL1dad1hMelpyQ0lBM0V4
-            TjNVNXZMalZQWVAvc3VLSDd5WEQyYjAKLS0tIElCMUZiV3VyNWp2Q2JzQmszTVBJ
-            eG1kUk5ucURKdU5kajdBTTB4ZDhaQWsKULFIQaSaDnslgpGD/STRvSR+Sn/l6aVv
-            nhBsRme52Rj+WNVX5A7uCl0abChkDS8cOnKhGaeP99gItyr6xvhgxQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmdDJ0VkJFcVRLUExacGVs
+            Y1J1Z1l5T3ZmcWVLbUM3MWxMUFl5OHVRZW5jClVvMEQrNVg3N0w4bUY5THR5Rk9S
+            ZFZORHBSVEpTdFJ6WEQyNlR3a1FqbDAKLS0tIEhEaDNzcjhCWXg3YXR0WGlZVHZZ
+            eEwxTS9VbWRZdDdOMFgzWFphbWgzdzQKO3rWdBHQouvoTjPF4HpgCbdbYxiFPj91
+            yyd+O71cPIJRhD/V7IECIg1Jc8PB2Lpon6t97G/J8+w9nda02u1r+g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-12T20:40:57Z"
-    mac: ENC[AES256_GCM,data:mqrWWhaGfUFTrPeHnYNr68de4OvTbEJ0QL1QVPHzIgdiUzf+7gU9CLKU2NqYL6JxwKuutpUs9WYBnJ4j4361JK/NEOmiAYXIJire0Lpc7iZNRCaEfeMLQPzxFp70jehWLEa5ZV/PSL9NIzjMGsTBXEwpgHcRHUGMsUWX9oVriis=,iv:mwVfx4s/0BLyzysHWsDh22Thn+OOcQKx1Ee1/62t+SI=,tag:3XmT97iE8Knv2l8+SVey+w==,type:str]
+    lastmodified: "2025-01-18T22:16:44Z"
+    mac: ENC[AES256_GCM,data:5y9uavZqHpcmrtyLif9lVvBxQ5JI/gxJ1eIF1bG9u9gmXbU58CAnwP7utJpH6NI13nGnAweS5CggRUtPOAA7M2Um3dzIrCGYvx/xACjJ+4/axz5a+pOC/MuD/W2WIa6Cz2zzRrlETL6V88CTSXDUB0oQ/92NjHFldZHwJpeSvXc=,iv:vEtjqqDAxPJMpWC+01TjVRpYtfnVhytyDagOmnkMJZY=,tag:4HPYu2tezbZMOYkUfIELbg==,type:str]
     pgp: []
     version: 3.9.2
