--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:2IA1kSQWtluVA+KwhtrwiFzns/Zf4MAum3Q3sr+lybEUcHkObntsDvLJA+givshKi/bA36Z9n3dSeqn80RD/hlM=,iv:LCFRLi1nMEMhXdTpENqzjbDhKFNAislCJiE9wxV39Ek=,tag:adFbVzyWqSCJHPKV8FoRLA==,type:comment]
-    #ENC[AES256_GCM,data:cA2if9lc1LdNWUL27kDJCOrAtsrepwxgkacMAaXfViqEJKq/zL1niBoeOyc=,iv:jSJGRA6OvvEedOMzYk4rvCP5PdIulOnFKZJcQYvfZw0=,tag:U879nQw5ZRm73XG92a1Z+g==,type:comment]
-    VIP: ENC[AES256_GCM,data:jjXzbpSoi9yzicpbJg==,iv:DCaSwwlw9C6OEn+qeTGLjvQf/zRXtl9+Imij4zLOGKU=,tag:i/A5hbXJL9JjiNtE9EonFA==,type:str]
-    #ENC[AES256_GCM,data:htEdNs7k28witxfZkvlKSFj/N++GtoZRT5VX,iv:EQ+XP1al4s6HfqGrAwO0BaRQEzbyOimNcQVnnTzgjes=,tag:Xu4ZeRVWZW4j0P/MN/KtuA==,type:comment]
-    #ENC[AES256_GCM,data:nr7Zh2fdPNZpUdFtVRDRhVYoPLbJAZxa9VgFvU01SKg27+nMJz3842x5Lrs+8eRT3M+1hzWY8mJh15DxvJtIg5LGmM+bS+UtkiiHhgFApkigKwAtkTzyFKY=,iv:Wo8abgAgszgMqvxdNQV+Drx20F76yiIQHb2+maIKErs=,tag:xc6E7zVLckICAWv+Hfh5kg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:svJtXow3gfrVXtWOE0U=,iv:phdT40HOhhZ7ld1qhTmIA1SYAXJOGIkINT8HOCkvYuw=,tag:htSxI33KfSGgyesx56VzTA==,type:str]
-    #ENC[AES256_GCM,data:MEp2n7DGEVzQkSqK1U1Y3NIyu2UR/Z8J2xPzLnam/Ct8hA==,iv:qiZtqbzGQHQ5vHJ4Gj7LXoTythihFMnv0J8FPf+8im8=,tag:dZ+60EWD0pIyv83HlhrcPg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:pXtRL0RS6bvlQZb91g==,iv:g5MDJAgaWAgl2TGf0yw5OH1aTYdDxZTgVNqI0tmLux8=,tag:pwzfzf2SMIRmFA7QSIrnZw==,type:str]
-    #ENC[AES256_GCM,data:iMUjiHOWVheAMdiuSLX4w4FaoCm3+d3M/tb3jO8RFRchwmCoM6SxRZRtnzQpK4I=,iv:fT5xJuqc55HQiPaLsDqAtW/4Efdd3S5amzH60I2Ai1k=,tag:a0+NoMZTLU4GEY/J2jp++A==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:3QOLI9/1609bgaiYEVemFHUL5oe/Lm85Woxvt7q4Sw==,iv:uyB/xK5ZRew69MIm2zjQdqvCVuJXMaFnhPNdx/9+hd8=,tag:zb6mJ6P1RTJ8w4EV5HC+jQ==,type:str]
-    #ENC[AES256_GCM,data:FFjhp1pMVWbI45ZOVJjqhikYzSQFqZLARtm3OCdA0vWNsf+zVCVek5VLGu9I0M+qOp/taUJ+EqMJ76Q6lZyp1VT5oZOQt5c6CkZaqrkhLNhM9A==,iv:XBa+fuXbmAUiDZ6Iat48EVrWmMI3+5MZUiOA8Qo5YI4=,tag:qXtvgV2nQrmhsKRZUK5zxg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:oBRhO74zpcxkc5gZ0eHa,iv:TvT6hg3e6D6NhNsI2AScAqoCuwRQrOKaApedOesV9os=,tag:KlnXM5Qa7bL+/GVR1Dnz+w==,type:str]
-    #ENC[AES256_GCM,data:tJtmmlvqnePVzE4bVzjIzA/cFLIjhFtPe9Y9O3f1KvpI,iv:F/ixgGaE/cLR1DYBaTeJi/3UDtEO9cRzTzrJQqAB7Pw=,tag:27foB6kOAQGKwNIz0QUlvQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:c2r7bNbms07qpvVwgWX1,iv:Oq95Hr5+sbhac+ZfjUm1SO7clHoIIwv3Lmo0Lx6/n14=,tag:H9Enn7yLEJkyumh1ix0dWA==,type:str]
-    #ENC[AES256_GCM,data:87x9uW652SFVxqzMdPD9K/58n/RCzdxSGj02i5Ykh8qZOnDGXHXgMwlJMlbk4qVrMqqsbifNWa8GTSumhCMcIvOLgsLLt+m3nI/tHtng6b4=,iv:v9iOFNTZ5zz3keW3SXlcEbfmN857R9+9zoo44ARIkNI=,tag:jdm9/gpmXshufYXx/sfD4Q==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:y5fl2iH+BTgK8ooU2Gpv,iv:Nev6LIAeFM/HCkOG0cOdPnlFOZfbSkm8w+/dKaLNFrM=,tag:tH7SGev7rFGKgJdoI6prtg==,type:str]
-    #ENC[AES256_GCM,data:UtPodcAuOF4yP/CqNHu4TA5cGqiMlLimo7LvX6MeH7iyjqAtxcv2f60aTK85ojMiiwkCz2ymkk103BTBbJPMTfAMAoTI7e99LP7PnCujxoklhOMWlNEJ,iv:TYJTKylepv7uSJBX0tCt85tljFFQaAHsCQ2ZbXqHUVE=,tag:dx3+Y7o9u1dvzneu0lml3g==,type:comment]
-    #ENC[AES256_GCM,data:myzpljPx7nK7xz7MkwcAE2rx2ChaGpehcz6X9xCrKNf5XSE3fdyAJx6kznbA1/ZhTvWpNPcBgBFzDe2pWC/Cc4JVguiScB/+Ss6y74nTTqD1Apa4WquKpecCV55qDym4rA2nIgmtoq3jWYS1iBjrnXJEskkgQVWVrQFTNA==,iv:h1F5ep+tkbyj3fCvlhUppED2VWHvciNYRj/Q5Fcl3wM=,tag:Pqfuc7CVD4vTsqLmVpcxgg==,type:comment]
-    #ENC[AES256_GCM,data:EbXM+ziKg77bYjSmpWpITcrFjcGWioyxrq6rIWJFJx6Zv2qa6lX3w5Ai3DieaXL2dwDe+HkLwAlDfQe87f564p8dWtdxAMYnPzZOGs5Ds94=,iv:qaWyQ5Ae5DYH2ydRnQuvYfR6+SU+3HHiMBMOnm+KG9c=,tag:8MHAF4JUMG/J5cHud1FouQ==,type:comment]
-    #ENC[AES256_GCM,data:aUmMkyyK4XiKl/aY5RoMb3LT4eecede9psYwn8ZgEcZ2zYgG/3ZFITP24K85aihbPeTiKoKY,iv:j93P0IaDgkp0894yxeX625LtYSwbhl5iV9/XqkW7gRw=,tag:rU1TiZJmB6M3BObFPpDZAA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:q31KU6q2OtVKZpVK,iv:VoTh3BLKhvCj2VBpnCdJuIdS83znuixVZY+QfN6wsnA=,tag:/ihdsP1aD9h9tebIQuprGg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:WbzXt0Yrlqb17KEN+Vj2948=,iv:147ryXdmJ7GbPk0cpxvNhG8w8aR1dNA1fbknxVB6nvs=,tag:z7vHyEVey5rhuZ/CyL7cjQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:Unzm9njeW1y44VeGv0/GUx0Bm74ID/dZlwp5XMI0Agg=,iv:HwWT62LPAuYeVmFGTh8GyVWp+6GA/ygPgUjs8KStX+8=,tag:Zw0ExF8KprKSS8jQX6Xmdw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:HLCLdziJrDr8X34vzUmRCMUXWfWV8KbDv7AaCw4AwwFAN9+18sr8Sg==,iv:FArug8B1Owpaq2+x36ZYOExBLT+N1F6bZ8kKYGaRMDA=,tag:yiHkR9H1eNNTVm4HPoKSFA==,type:str]
-    #ENC[AES256_GCM,data:fblar7hjY0smZgKlTuJ4TxzOEoy/xQUNkdHLEU7DWZm5gZ4cyarCQE5tyRH7HClM3QsFr50LtgiRqxd7Wi6dQA==,iv:WJ/8A3yEKnH0qZWHPj7cHlTLkfVhth35YVZ/klYBFDY=,tag:MOKr/62a9QVmVbDMq8UhAg==,type:comment]
-    #ENC[AES256_GCM,data:SqSHZTPmucCnclRILpUtZmE3zVT0Ho1nMK9xn+eHGcqvcJ83fFyrzIJEFlTuLgBZdnxrrLn90lM=,iv:WFjuUZ/3Fmf1EaY+Tb3zxv4yY/JWvfq2AqOFQUw/UPc=,tag:QpYo9mQEf3afbSHPyEaFZA==,type:comment]
-    #ENC[AES256_GCM,data:hp+f6WzKY4O4jvYJucXJkyWe4euThPHEyw==,iv:Ij5skonZO5+3vojpyLtxtgQHz7aDWm37JBbCi8UkSDU=,tag:rmA0dyereaayBus5wQIn4Q==,type:comment]
-    #ENC[AES256_GCM,data:7XnsM3oJqhGb0NVo65C3rsgLXLrmlu3khrKukPRv5JsOMYU2R1HQk8UhLcW4CySVUl6ZxcqOHq0nDFVDGNo2HlcGTMAV8RQx8/QQ7b8=,iv:8gSBmdGO6HuDpv31dJujyYvo+rfaRZU1AHP5cjfdSrI=,tag:iE6vHlfdgXwP1LMQaxpv+w==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:c8n+iM1YctlBGFaVf3bgOi8zb/0FXFMLoOttd7F7L16gv1GE93+LsNiyN4mWblZF,iv:Uy77+CFlRB1hdZfRdW8NCILuUc7JKYUngLYy5OUwPsE=,tag:8zT93WAIVXABeVgxb6o++Q==,type:str]
-    #ENC[AES256_GCM,data:0JJmVs9qG75iv7g6Weak0vJ2SA2cBqjO+3QIpeX7/5MMX+mR0ZiVQhLPYuDwDa/Y7CGs9rvWMzY0V+wyxcbjCnDD/QZEIGk=,iv:DIsQIG8ZuGhqcX5ebL3nITmt+USCtsiKoAWxVDDf0ww=,tag:cBFYdC+c/BYPRFIxTwWgfA==,type:comment]
-    #ENC[AES256_GCM,data:Ve5ZQ7C1oMIl644zZi5JqGbsR8WNBbEVUFYOJCObzbAMAHHFHsz3CJvvMaFSuAxuRp6DhtId,iv:5YxM/j+4ICnBZ3mVNlrkP1PNoNUlj74zTx3a1ccUsqo=,tag:+ZrffEy1z2YB6GgL5A7a5g==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:hdgRt80mpw==,iv:ym6TWm1jVWDJ05rmKP8KVKUDcdsz/RBPJOpCT+JvfmQ=,tag:gOL6eeMiQxpnA32MWvnQwQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8HQTSBTybfmv33hP2rRuFEq3mtg=,iv:b/TFxbpOX2FDUF3GYP7lxYwuvMQif6MNz2ynuEVfTBg=,tag:afYE9OZJeQ5kv/uBMqyFIA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:XjtWK/t1MgTNlB0=,iv:V7P/saC9gxPGNf70X9nGjmiTa5r+pZguxriexmGeLfc=,tag:PpbFATRTsG+OfVsz7vRAQg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:B2SBpgczYnsa4Ec0BjH5,iv:mALDNVw2fUMGsGHY3oD9gSomYz5c5oCoQTO+wt/1yzo=,tag:2TbzhxNVrYs7xnz9h7qZuA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:6WACMbmmLKG9yTfLxF9FENOcJViD5N1XRg==,iv:4l9OZBVgq78aTiABih61Myd8IlPDZFUDmS2+gD/PANs=,tag:OIUQLHMb0UX4x2Mey4/V7A==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:rGdtm0cKqvKTUpW6u8drDhiAjq3aG1qeFI23mVMjVg==,iv:pzZYzmj3RMdA7x8aZ3QihNjOImXh5uTE5yENYi0/E+k=,tag:+B0vsCCbQjbPABRlXwGyLw==,type:str]
-    #ENC[AES256_GCM,data:VuhcjQl3jPGGHvddRps4pOquTwKdi0XP9o5kvdCOCI0U+XTIMSw=,iv:wiCkEmtSHvjflRYUUry95lJpNg+KzkicULm5JEoEfSg=,tag:4/Ta7OUyDuLPmaWLGAaGWg==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:mQCXhMvR5T6Q6JmSZKiNc9FH8LY=,iv:+CbaTjBxctSGX/gJ/Hm9swv2fo98SkcX7X7z9keg6KM=,tag:tSG7gNraiz9+WCq55Qguog==,type:str]
-    #ENC[AES256_GCM,data:A0PUvQja3g9jI9N75jE=,iv:Lk45Ve08qLtq6gzrhq+5PpVR/nyhoo7S4x9eqc/9Ntg=,tag:xSrRTOIJ+KdkKzEJdbaDSw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:MfgSbbPKx/TwMu3aZw==,iv:p+YvtBMc+0z/y7x/MzTbx6aFWQgJ3HVcMDweJc5h23o=,tag:VSLstk0vvvSwNg0PJfn75w==,type:str]
-    SVCNET: ENC[AES256_GCM,data:UbHIl+SsDyrBGqkP6w==,iv:aAz9E4iQIzSKGSwBjoChu6c/oXxo2/b6F2+tlN+5j1M=,tag:46wqBVkvzhgeML1o7gYg6g==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:d+vjlA==,iv:Jvb247+2Lrlu03jnjmGa3bbyON3IiyF0hjvAbjwxOpI=,tag:W1s+k9sik1+DaEs8xCCvOA==,type:str]
+    #ENC[AES256_GCM,data:srl1SAQ5PPlgSetUZYHQhyxvu4mdWsnPrxGpBdRCDi6y+e6K71G2Ibfv/UQhQwF6vOUkzNIt3ZgGuk8PSqJTU/Y=,iv:BhQvudTvxDhOGzBnkPCyigviAtp26PQgRiMqw+NJK2Y=,tag:Oe0HmiSVR19I+2rY7C90cg==,type:comment]
+    #ENC[AES256_GCM,data:GuTQF1Pn57pK50jWZZJoGmSd1kLQCP/VsJeEv2dyt5LTXSVfF9ZZrXEpuG0=,iv:WtcxLnCG8oNIu+YHYX8QcPZMpD6ZzV8fN+/RevaRYng=,tag:KXwDOT5T3nTM/JOkkxD1zA==,type:comment]
+    VIP: ENC[AES256_GCM,data:8lQ4TaoO8msBBJX7Dw==,iv:vfkkMAKbGED+tAXb+9L/o5aqdy3TfYiD7uktKPZ4/r4=,tag:BwOklwA8JdjYsLvnXV0a/A==,type:str]
+    #ENC[AES256_GCM,data:PIZlS2j5XWXOLVaTiHbx3AfWSp7s2jpdGW3f,iv:al04ME7uLEfvypK4o8nOmjuDzZFZduGHoxtvWFP6iZI=,tag:GITBWL0wZeqNxLQjcLPXuw==,type:comment]
+    #ENC[AES256_GCM,data:WdNTQrZ3CtViyHhlpt7yyCcPmupVxJcGL0Pz2W713OlU5Ddp+8TI0RM5MTXZxSo9LHZUgF9G8Dncoky2MMLA6tZsv0Pdyb+UBMAjpJNGed6sy8mgNXkpD8s=,iv:8Inw/B/o08ex+RKZh3lIaK+KCohRZm+kmxfuH6OIGaQ=,tag:WKcxZQXAYLbw8TiHBD69SA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:4COofT9LGr+rWpQ8NuQ=,iv:tqxu9dhqRbE1jUKN7w+R66nmyh+pAwM0p4ZZjVJstsw=,tag:XNM2Syi67Sr/CfTPBtgo0w==,type:str]
+    #ENC[AES256_GCM,data:FHyPiOV4nyuR7+CBXGT8XeYgxyor/0aEry6tuLzuxMpHNA==,iv:X/Nkft8D1Ih+5Mi40ZVamXuuFt4HgM+h1sGWkwB5Jxk=,tag:i/rrbtnXkMB7TRQzptf7xw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:P9agiHp1GcRiJfndPg==,iv:hRUjKqPRzdbEQq/FY7dg+cqeRtgWGD4f3Qnm6a99cOk=,tag:TOAm1vxwDdPWtNT0snz0xw==,type:str]
+    #ENC[AES256_GCM,data:pz6BVdeE02cK1cEDpsldX/yhbbVC396oEkm17Dw7b/NewNSWhwZmRa81t15wtQE=,iv:66YYpgXs6JykBMGcuRRAhx7g1Kk+AUCYh4WQpbFwNjI=,tag:aBvPc+yDJFKz8J6g6KDJbQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:5D4JAU4vfp/uMCOq5CdwH/HomskJvs3Omm3UY2IyMQ==,iv:xA67YADcE+Nbu/XWJLNLH6Z3RFuw7LDx/fLZReva6Vc=,tag:Krw3K7quQpuR1tMJQbetuQ==,type:str]
+    #ENC[AES256_GCM,data:A6051o90gFGR4EWIlnlJ+n+jAd54Pa+Qjyen/b2iMjHgWC5A9FTLPDQ0/LMOO1jHt7dFCs/DEiUs9PTtgpEI+ZhtvRE3OdRIC80ZCMouVrJmIQ==,iv:lqieqQxf+ONgbtlR2K9uHYmyaGcaBMway7k5by6wUq4=,tag:/KkNxkEV70pYDLEQECAB6w==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:lh7V/Yqi4VbAUPVCZ6Su,iv:7IjX+k51ofEUu5IgzUSffbreh3vt1RJzJPiGe8lJB38=,tag:8yy0iR27+lYY+CUkGOVFSw==,type:str]
+    #ENC[AES256_GCM,data:1r2rEKKiusOXVHD2ZTI9IWr28QXy+PSDIhGqypBwTgdR,iv:qEAyyfNLc0+3dBoUv+GYbuQoptsGzoQt9zywRqHwbDM=,tag:1JqqaBhXt5fpZhfO+3lQfw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:loreRyzYw7KHabjjRhze,iv:P6CiXzkag9bjyiR+0gQL6rXidxQ48jOWoAkJX/bK/Gg=,tag:/ey+SmNForSalD6FdmgoVA==,type:str]
+    #ENC[AES256_GCM,data:ZgAJcuRsHzGg3fJP42J2AAQPGp0P/qYeMBXb/U0c3AQZpFa3WBzaX8fziCuLCva7OhQ+6cwrdbOzqYJs53Nl0J1zshMCTMNMDH+URNbfjFs=,iv:qOQmMl29zSPXT1QxV5TJEtcmm3YdV09a8vBlAyLsTNU=,tag:P+BDGSpHBtpWLImSYZNu+A==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:edxsVpml/eA9etuNoME5,iv:McsBsq41gPFuvSxcjzFt6HINHcfqQc+jWrbQBkJ316s=,tag:2CQZoF6AZcYcSFIYWf32vw==,type:str]
+    #ENC[AES256_GCM,data:ttQBvq5KOzzPMw9i7T+xaewAdP/IL0wP2cyx3HykCxhxvwnoGvY8Px8F2gPEAMSvF1C2GN9JupkQ8jOyJf6BT1yIpxXO+KRD1CYLOVHOWbFl2lJWIVOc,iv:nHjBZVyxFo1ltgMgIg2Gfdeut3b41mi1VR8z6f/2PXU=,tag:9W+uKzfQ42xfPZonjJigJg==,type:comment]
+    #ENC[AES256_GCM,data:dt2nJigIH/PMsb0fCY+zUO+CaduwLivWRmURtjXLFSJUNG8sf9FVJsHfN/WI/ZOPVcpZxgFtTfQzsrjyASkUYbQCcdTQJkPJ3EXxLS972wiKB7HIUoIaab2wPV6jiwHpXuH/558jJkoYq2nBHVhQMuTo+CrT7rMFedks3g==,iv:E7FFjSdKUO/0XeZ1SNIfpiSX0tSUCYQo9I6wnnSa8ek=,tag:dMMu5dSwKBdMBTyE8HyH/A==,type:comment]
+    #ENC[AES256_GCM,data:Z6A0HHI3ujCKKTZwmcfIfk6UfgOQmBwxVoDUgbP5Sb4MCta3CTmlD1q4nma1YkBj7xm6ng2TyQM46/qFcnnHrW7gonvdHP1ZgZIxw6H48UY=,iv:TxwxtnVzE38RTiAZEAUNNby9G0dFzl+hFZb5JMGehw4=,tag:7xKFuw6ak0/wRBMkfEpr9Q==,type:comment]
+    #ENC[AES256_GCM,data:F5Ezgm739IQ7BUQS74TVhyCgGTJg8B8rYOVRxwR6/SxePEN4TBLuNH4RQFtCI/Gg+IlCJ7yH,iv:LEJzSR2JxBlYCNFhQ9O+3RHhesNdS0bJwKz6OU6oGMs=,tag:3woy8fuAxXDu0sv0EBFxyw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:CFcKKwqAapWzlMYQ,iv:lF51oY6+xqptinzoMETsL7mqTyG1vIGWU4AaXCuOmHE=,tag:qXd7Gz5fRW2U2mEA/zui4Q==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9oKw4iQ+hURRaO4oaxxWlcI=,iv:SIPBPExRYv9gsAlCaluyeYvo9cevuLE00FdsHf04Vfo=,tag:UurH6TpOP7soylmYukVrlw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:BdM5NzjyRwWjG0fWmaIQWYkzP/oXi2vMpItgS6M1lfE=,iv:Ce+LsQiB1GtC8FXeD9TTkL7xNepbZACVmPz3rj7igNI=,tag:rAuWU6otGem+S2FeVExz3Q==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:8oy8Qea0j7H3wuGncOG+inAK0fVHN+xZOvlumGwVQ6wFoHrdAXu8ZA==,iv:9rLTime9RVBATI0zu6xmrp4OG1hjLo46ylDFRhYzAy8=,tag:yrPBaiG7UxfWQERL7mEK8g==,type:str]
+    #ENC[AES256_GCM,data:85kuxPsi6JZOR34EQsht2kLEOD5eOpQ6KBe1oL0pLZCdFg5iMaKx8BpT5NfsE0N1XIsjYmPGZxaWsu+SW5P/NA==,iv:GdVcdlKd5Evo4/bj3LiDL0fFK1xQ4a7tjTeBVx85iZQ=,tag:7G8wZJG4qU0X1DIQAamywQ==,type:comment]
+    #ENC[AES256_GCM,data:ZoCAkulnuuWIdpq8ffz1a9r145phs/y2979ms6Rc8eZRbwafRadPWq1otK+PyAzHi9Eh9Q/PNyY=,iv:lkx9TKCNf+pw7Q3Jf0m9wJvQZT5V5xBJEDu4+R/ZT+0=,tag:7yKodJbvPEW48eAFXYah+Q==,type:comment]
+    #ENC[AES256_GCM,data:rPl79B2feyjBkS48tLxNBDc/t1S1GCSHbg==,iv:9CC+3Ofl3ZUcBZifg9Yhy/k9lFg8k+zCYgpD9W3AHfA=,tag:Kh7jQ+AYFICbJnhDb/WphA==,type:comment]
+    #ENC[AES256_GCM,data:WM1dVxQRy9GiZ7U1whpIf6GPeLZtjMDE74mWekxnGDv8zYW9YElkAMRM6FN/+ltQp903+GtGJBPm1l1cLqmuEkX83F1YOfbYTkryVV4=,iv:ShHEIUba4ty2lR1CIrVPnO1KeosmXkBMAGNn7uBExVM=,tag:9VZRwZOK4KwLtdbYxPT8ow==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:IGE45y5Gwm95X9y3oynop6dMGQf88K+TOPB7zJYmphoRT+gd48KNMXFoq6eP2zwQ,iv:M/qbOErfQbOQKxdNsFdwJpFqpSEn6LWWhIeBy+o1gQI=,tag:FfRaXRD+LblPOFY0iMLqyQ==,type:str]
+    #ENC[AES256_GCM,data:eWugxzK7Aqcw9amU1fIf9MtBB/HI5GJtxKw/uJT5Kb6nJi3HUd52hl1wvmSlDPXYrrU1Y3/O0HMG26Y2HhaEt9WrnXW+3Xs=,iv:gzDRkHCJ0BddKnuzp9+9ohsVyPl+zu8e7fE10aGxoS8=,tag:Rk9J+4kch30Xez7fHFEx4A==,type:comment]
+    #ENC[AES256_GCM,data:6ZIBKoGbpGAc0LqJg83DvJBbYTzeIbGJrDIjdYcYHHFRC+XJ/pw00yTww2R9KydVRvOmu5f7,iv:w1PVr95XrBhGuuiw0ydW5ocPmIaUHsKSkeee0Tz5fa8=,tag:0brXNpCoxHEoGs/JI7TImQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:xXJk0BwbFQ==,iv:vEr7KsokXmmZ1jjJ6qCSP5flKx/kW0zyAHqoB8RLLZ8=,tag:yfG9UMmSfbK5FnIC3IZ8QQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:TTKuWIGoWl//k0gHmpLOHTOiDGc=,iv:52TMYgJRZmJYKdvWBQuJNdseIHCg4CXWLK/B+Sa3tUE=,tag:XxQ2sqc+ayW0yW49uwJBAg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:NFOQEDEWHyco0ew=,iv:LHBWSKGH9/dQPv27DAlrzZIPm75sF0PpWxdAadMOpgc=,tag:DyGGouMHztlIBwPNWfZm9w==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:3OxU2XQAzm0B/qrqGC4s,iv:k2wKgs/v0G7pW29xgZh/Q0wqXBp7w6ddyA4BCEeRMbM=,tag:h0wdLdix5jRzNY4YAGlaCg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:MbFzPgHVuf/ca2eVA1bPYxAJxtHDrIn8JA==,iv:C5TBJ5a2ZEazqoocv2WaHnwKZPvTAcfc6DZui5usKRc=,tag:3Whr+gHFdMGoIGo0sB3Xhw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:7pqjosbH+BoYpwXVJNTwk1HWw83ZOjr0122VQIQXeg==,iv:QmQHksfbLhIT+44bUsoXjckjWl44zmfb99VTGTwjU6A=,tag:MQtAXctoD1rUGOVsFNjMRw==,type:str]
+    #ENC[AES256_GCM,data:x9Z9/q3cmD0oYQ5eK2kZvohSG2d5FIzO3SeI1qEffNyIcN1qOjY=,iv:/S7V9ztLnLlPg3Ysdj7w/vvd6Jv5DJ8goaAnlTEMvPg=,tag:EmStLafyJY16suos5Pb3SQ==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:afXae9xwxendcdzbFu8Gh7U/3lA=,iv:rq+y9dzCMZcjn1r54d9shoLl8ylXqner1Jm6nhfEzCg=,tag:7T/Ehptl9e9yclzRudSspA==,type:str]
+    #ENC[AES256_GCM,data:w6kmhYNmEks3DkiW/HQ=,iv:fcApMpO+A8AfSPWEVufd5T9NTPkEKQwgyQ7r7krbOFc=,tag:LlPk+dqyTvrrehg+35MckQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:QswM1+1RD8VLdKuEMA==,iv:V+T3+zRVgEpOKXCYn6GvoBvG4DKfIO9MMeh974LfraA=,tag:5d1U2sXSv7u1yv3WfuwXBg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:ILsi5zt5ZIbREEIfpg==,iv:O0AlDlti+OmRMpoU1TdNzWYSPNnl63+e8xTJCzpIwiw=,tag:RoWamH1ETqjs52Q63IZ19Q==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:ZJff2w==,iv:VksGJi7OQkQybdbnfFrY+2f0Qti2jrRyRTjX1uRYLDI=,tag:jsPbnjfOVpPE6E8yuMKzTA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArekE1cUUzS3lVbXI1cCt2
-            T1Evb3RTRk5wei9FYyt3a0xUZUpOOUJWTTFRCkpNbUpCMGlMZzBUb0x6L0IycWdh
-            N3hFc3pYNytsV2xtNXNvQk12aFo5QjQKLS0tIE9jU2VnYTVhRTVUeGMvVExpVWUv
-            NU8xc0FoWUJpYWxzeC9RSTFGWHRuRzAKOsl70C1qGeS8aReZDTXUDyewZcysByza
-            n1lQlEGCQGq8CWAKXxU19IRmEiaf6DG0cuVdPzsT61OXLm8o+KnxFA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXMWx5ZEZ4aXZkZ2w2Mm1x
+            Tm0wNGdrRWpxdFplUnVabkNEc0tvNWlMYUhJCmxQcHIyZFB6L0hDTWZWRlNqUVRR
+            NnFYMkVSZEY1Ri9oN1MvbFA5UmJ4c28KLS0tIHhmYkdMb0xRYm5wU1pQWWRVT20z
+            cmc2UmhocW0xSTMwWlhKcTI4UXpnOTAKQA0IR4de0bZhTqVVw6SHZlobRWaCsOho
+            gocSWG6ATwF/zpbAHW6Q9hESWXmAPh80582pqYJNcOufhL2OJezhzw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-12T20:40:57Z"
-    mac: ENC[AES256_GCM,data:pJXSACMMmmiyYz75dEpkbCleIaQts4mDK/wROfBenKIyasxFqyIUF1N9tO3AIB8zcgO05cSaamqQlX+wyIAGRI++RS5ylmGrfHvjaqdxdPteapE4mZEgzve6nUHCzUjY24rLeBmY+4skim675rrXT9xQdwGMKmim14qL0AK270s=,iv:IeUaU6H5hDWZEWrDh3lkSsgB5IoTYLhqrruTwfH/7sw=,tag:46JyirIMhJbUCoFe3qGpMQ==,type:str]
+    lastmodified: "2025-01-18T22:16:44Z"
+    mac: ENC[AES256_GCM,data:PGfn4NYj4+1PSrWYVHz2zYK1CufbxGJl1K+NEWx7gCr59HrBSAPEMVXNW6Hh1jrF4drGuYgVU05Om9qiREayB29A0fBC5vRz4Rl/b+HfEVcCz3C/FDjQSw8Tdnq/F4YCKMYHfJ85Nj91jv6pG8R0hD8ZBS0M5Ot270a415Uc63Y=,iv:tIFaUbVxnyqwM04Q4Xj2wPEqeoPIoXQyV1Iqgntt2uc=,tag:zquTksLqjoZtLz6Ua1TrwQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
